; ModuleID = '/home/carl/AnghaBench/exploitdb/shellcodes/netbsd_x86/extr_13471.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/shellcodes/netbsd_x86/extr_13471.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@scode = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [12 x i8] c"length: %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca void (...)*, align 8
  store i32 0, i32* %1, align 4
  %3 = load i32*, i32** @scode, align 8
  %4 = getelementptr inbounds i32, i32* %3, i64 23
  store i32 -11, i32* %4, align 4
  %5 = load i32*, i32** @scode, align 8
  %6 = getelementptr inbounds i32, i32* %5, i64 24
  store i32 -1, i32* %6, align 4
  %7 = load i32*, i32** @scode, align 8
  %8 = getelementptr inbounds i32, i32* %7, i64 25
  store i32 -1, i32* %8, align 4
  %9 = load i32*, i32** @scode, align 8
  %10 = getelementptr inbounds i32, i32* %9, i64 26
  store i32 -3, i32* %10, align 4
  %11 = load i32*, i32** @scode, align 8
  %12 = bitcast i32* %11 to i8*
  %13 = bitcast i8* %12 to void (...)*
  store void (...)* %13, void (...)** %2, align 8
  %14 = load i32*, i32** @scode, align 8
  %15 = call i32 @strlen(i32* %14)
  %16 = call i32 @printf(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 %15)
  %17 = load void (...)*, void (...)** %2, align 8
  call void (...) %17()
  ret i32 0
}

declare dso_local i32 @printf(i8*, i32) #1

declare dso_local i32 @strlen(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
